# SFML-Game

./: .gitignore  CMakeLists.txt  README.md
docs/: development_roadmap.md  game_outline.md
include/: Sprite.hpp
src/: Sprite.cpp  main.cpp
tests/: test_main.cpp
